Fix Spacing with Multiple Elements

--- a/minui-common.css
+++ b/minui-common.css
@@ -43,13 +43,13 @@ h1, h2, h3, h4, h5, h6 {
 	display: flex;
 	align-content: center;
 	justify-content: flex-end;
-
-	padding-right: 1.5em;
 }
 
 .m-nav--data * {
 	padding: 0;
 	margin: 0;
+
+	padding-right: 1.5em
 }
 
 .m-btn {
